# imessageJSONexporter

./: Cargo.toml  README.md  build.sh
.github/workflows/: test.yml
docs/: diagnostics.md  faq.md  features.md
imessage-database/: Cargo.toml  README.md
imessage-database/src/: lib.rs
imessage-database/src/error/: attachment.rs  handwriting.rs  message.rs  plist.rs  query_context.rs  streamtyped.rs  table.rs  typedstream.rs
imessage-database/src/message_types/: app.rs  collaboration.rs  edited.rs  expressives.rs  music.rs  placemark.rs  sticker.rs  text_effects.rs  url.rs  variants.rs
imessage-database/src/tables/: attachment.rs  chat.rs  chat_handle.rs  handle.rs  table.rs
imessage-database/src/util/: bundle_id.rs  dates.rs  dirs.rs  mod.rs  plist.rs  (+6 more)
imessage-exporter/: BUILD-INSTRUCTIONS.md  Cargo.json-only.toml  Cargo.toml  README-json-only.md  README.md  build-json-only.sh  test-json-only.sh
imessage-exporter/src/: main.rs
imessage-exporter/src/app/: attachment_manager.rs  converter.rs  error.rs  export_type.rs  mod.rs  options.rs  progress.rs  runtime.rs  sanitizers.rs
imessage-exporter/src/app/compatibility/: attachment_manager.rs  backup.rs  mod.rs  models.rs
imessage-exporter/src/app/compatibility/converters/: audio.rs  common.rs  image.rs  mod.rs  sticker.rs  video.rs
imessage-exporter/src/app/converters/: attachment_manager.rs  convert.rs  mod.rs  models.rs
imessage-exporter/src/exporters/: exporter.rs  html.rs  json.rs  mod.rs  txt.rs
imessage-exporter/src/exporters/resources/: example.html  style.css
test_export/: +17143621003.json
(+34 files in other folders)
