[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["command-line-utilities"]
description = "Export iMessage data and run iMessage diagnostics"
edition = "2024"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-exporter"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
clap = { version = "=4.5.36", features = ["cargo"] }
filetime = "=0.2.25"
fdlimit = "=0.3.0"
fs2 = "=0.4.3"
imessage-database = { path = "../imessage-database" }
indicatif = "=0.17.11"
rusqlite = { version = "0.35.0", features = ["blob", "bundled"] }
crabapple = { version = "=0.3.0" }
